# avalanche-drone-sim

./: README.md  pyproject.toml
artifacts/: final-check.html  final-check.json
scripts/: demo_batch.py  demo_train.py  demo_visualize.py  final_check.py
src/avalanche_mujoco/: __init__.py  config.py  drone.py  mission.py  mjx_env.py  obs.py  physics_env.py  pid.py  scene.py  terrain_mesh.py  types.py  wind.py
src/avalanche_mujoco/models/: quadrotor.xml
src/avalanche_mujoco/wrappers/: __init__.py  gymnasium_wrapper.py  pettingzoo_wrapper.py
src/avalanche_sim/: __init__.py  capabilities.py  dynamics.py  env.py  policies.py  terrain.py  types.py  viewer.py  visualization.py
tests/: test_env.py  test_mission.py  test_physics.py  test_visualization.py  test_wrappers.py
